[package]
name = "mmap_disk_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.91"
nix = "0.25.0"
native = "0.1.0"
cvt = "0.1.1"
rand = "0.8.5"
rayon = "1.8.0"
memfd = "0.6.4"
clap = { version = "4.5.4", features = ["derive"] }